The file is now complete several problems were encountered, one that persised was the div hieght getting the math right and accouting for the margins etc - grids added - flex was used and calibrated - added the listener and events to make the trail effect on the grid -  made the prompt to choose the matrix length and height - functions was added to remake the square matrics - problem solved the issue with the hieght spacing with regard to the flexgrow     to make sure the matrices drawn are square one     + NOTE +     this issue will arise again if the limit of 8 squares is exptended - limit of a length hieght of 8 square by screen was added.

--- a/style.css
+++ b/style.css
@@ -1,17 +1,29 @@
-div {
+div>.grid {
     border-style: solid;
     border-color: black;
-    border-radius: 18px;
+    /* border-radius: 18px; */
     border-width: .5px;
-    flex: 20%;
-    height: 20%;
-    
+
+
+
 }
 
 #flex-container{
     display: flex;
     flex-wrap: wrap;
-    height: 100vh;
+    height: 95vh;
+    margin: 0px;
+    padding: 0px;
 
 }
 
+.buttons{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+button{
+    flex:  0, 1, auto;
+    align-self: center;
+    
+}
